# irish-transfer-model

./: README.md  pyproject.toml
scripts/: README.md  README_SCRAPER.md  analyze_missing_transfers.py  clean_transfer_data.py  demo_scraper.py  fix_transfer_data_plan.md  run_analysis.py  scrape_all_elections.py  setup_environment.py  validate_scraper.py
src/stv_transfers/: __init__.py  data_structures.py  diagnostics.py  model.py  scraper.py  simulator.py
tests/: __init__.py  test_integration.py  test_model_smoke.py  test_scrape_all.py  test_scraper.py  test_simulator.py  test_smoke.py
tests/fixtures/: README.md  limerick_2020.html  limerick_2020_real.html  limerick_result_2020.html
